<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp">


    <!--Entrada salario bruto anual -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSalarioBruto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/bg_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="16dp"
        android:background="@color/bg_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salario_bruto_anual"
                />

            <EditText
                android:id="@+id/etSalarioBruto"
                android:layout_width="195dp"
                android:layout_height="50dp"
                android:hint="@string/ingresa_salario_bruto_anual"
                android:inputType="numberDecimal" />
            </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Entrada numero de pagas -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvPagas"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_card"
        app:layout_constraintEnd_toStartOf="@+id/cvEdad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSalarioBruto">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagas_anuales" />

            <TextView
                android:id="@+id/tvPagas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                tools:text="14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarPagas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_remove_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAumentarPagas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_add_24" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Entrada numero de edad -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_card"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cvSalarioBruto"
        app:layout_constraintStart_toEndOf="@id/cvPagas"
        app:layout_constraintEnd_toEndOf="parent"
>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                />

            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="16"
                android:textSize="38sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_remove_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAumentarEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_add_24"/>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Entrada numero de hijos -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvNumeroHijos"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_card"
        app:layout_constraintEnd_toStartOf="@id/cvDiscapacidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPagas">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_hijos" />

            <TextView
                android:id="@+id/tvHijos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="38sp"
                tools:text="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_remove_24" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAumentarHijos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_add_24" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Entrada grado de discapacidad -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvDiscapacidad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_card"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cvEdad"
        app:layout_constraintStart_toEndOf="@id/cvNumeroHijos"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discapacidad"
                />

            <TextView
                android:id="@+id/tvDiscapacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                android:textSize="38sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnRestarDiscapacidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_remove_24"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnAumentarDiscapacidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="TODO"
                    android:src="@drawable/baseline_add_24"/>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Entrada estado civil -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvEstadoCivil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bg_card"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/cvNumeroHijos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estado_civil"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

     </androidx.cardview.widget.CardView>

    <!-- Entrada estado Soltero -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvSoltero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/component_selcted"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cvEstadoCivil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvCasado"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Soltero"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Entrada estado Casado -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cvCasado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/component"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cvEstadoCivil"
        app:layout_constraintStart_toEndOf="@id/cvSoltero"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Casado"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <!-- Calcular nomina -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cacular_salario_neto"
        />





</androidx.constraintlayout.widget.ConstraintLayout>